src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Rollup_Affiliations_Status__c</fullName>
        <description>Formula field indicating status of Affiliation information on Account. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Affiliations__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Affiliations__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <label>Rollup Affiliations Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Affiliations__c</fullName>
        <description>Indicates the date and time from the most recently updated Affiliation record.</description>
        <label>Rollup Affiliations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Hard_Credits_Status__c</fullName>
        <description>Status of Hard Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Hard_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Hard_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Hard Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Hard Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Hard_Credits__c</fullName>
        <description>The Value is set to null so that the record get picked up for processing.</description>
        <label>Rollup Hard Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits_Status__c</fullName>
        <description>Status of Soft Credit information on Account. Status of &apos;Ok&apos; means data is up to date.Once the update is completed , &quot;Rollup Soft Credits&quot; is set to time it was processed</description>
        <formula>IF(NOT(rC_Giving__Track_Soft_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Soft_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Soft Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Soft Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits__c</fullName>
        <description>The Value is set to null so that it&apos;s picked for processing.</description>
        <label>Rollup Soft Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Summaries_Status__c</fullName>
        <description>Status of Summaries information. Status of &apos;Ok&apos; means data is up to date. Once the update is completed , &quot;Rollup Summaries &quot; is set to time it was processed.</description>
        <formula>IF(NOT(rC_Giving__Track_Summaries__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Summaries__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <label>Rollup Summaries Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Summaries__c</fullName>
        <description>The Value is set to null so that the records gets picked up for processing.</description>
        <label>Rollup Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Affiliations__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates Affiliations should be tracked if checked.</description>
        <label>Track Affiliations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Hard_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Hard Credit information on Account.</description>
        <inlineHelpText>Track and display Hard Credit information on Account.</inlineHelpText>
        <label>Track Hard Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Soft_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Soft Credit information on Account.</description>
        <inlineHelpText>Track and display Soft Credit information on Account.</inlineHelpText>
        <label>Track Soft Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Summaries__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Populated by trigger, indicates if Summaries should be tracked.</description>
        <label>Track Summaries?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Gift_Membership_Summaries__c</fullName>
        <description>Automatically populated, Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</description>
        <label>Update Gift Membership Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Lifetime_Summaries__c</fullName>
        <description>Automatically populated, Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</description>
        <inlineHelpText>Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</inlineHelpText>
        <label>Update Lifetime Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Summaries__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Automatically populated, Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</description>
        <inlineHelpText>Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</inlineHelpText>
        <label>Update Summaries</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <namedFilters>
        <fullName>rC_Bios__Account_00NE0000002stgvMAA</fullName>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The Account selected must be an Organizational Account.</errorMessage>
        <field>Account.rC_Bios__Agency__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organizational</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Agency</name>
    </namedFilters>
    <namedFilters>
        <fullName>rC_Bios__Lead_00NE0000002stniMAA</fullName>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The Account selected must be an Organizational Account.</errorMessage>
        <field>Lead.rC_Bios__Agency__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organizational</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_Agency</name>
    </namedFilters>
    <namedFilters>
        <fullName>rC_Connect__nf_01IE0000000QvXWMA0_00NE0000002u7c8MAA</fullName>
        <active>true</active>
        <field>rC_Giving__Batch__c.rC_Connect__Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Batch_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>rC_Connect__nf_01IE0000000QvXWMA0_00NE0000003pQ6LMAU</fullName>
        <active>true</active>
        <field>rC_Giving__Batch__c.rC_Connect__Household_Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Batch_Household Account</name>
    </namedFilters>
    <recordTypes>
        <fullName>rC_Bios__Household</fullName>
        <active>true</active>
        <description>A person or group of people residing at a single address</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Bios__Organizational</fullName>
        <active>true</active>
        <description>Corporations, Foundations, government etc.</description>
        <label>Organization</label>
    </recordTypes>
    <validationRules>
        <fullName>rC_Giving__Match_Ratio_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.rC_Giving__Account_Validation__c.rC_Giving__Match_Ratio_Required__c, OR(NOT(ISBLANK(rC_Giving__Maximum_Matched__c)), NOT(ISBLANK(rC_Giving__Minimum_Matched__c))), ISBLANK(rC_Giving__Match_Ratio__c))</errorConditionFormula>
        <errorDisplayField>rC_Giving__Match_Ratio__c</errorDisplayField>
        <errorMessage>Required field: Match Ratio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Maximum_Matched_Greater_Minimum_Matched</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.rC_Giving__Account_Validation__c.rC_Giving__Maximum_Matched_Greater_Minimum_Matched__c, NOT(ISBLANK(rC_Giving__Minimum_Matched__c)), NOT(ISBLANK(rC_Giving__Maximum_Matched__c)), rC_Giving__Minimum_Matched__c &gt; rC_Giving__Maximum_Matched__c)</errorConditionFormula>
        <errorDisplayField>rC_Giving__Maximum_Matched__c</errorDisplayField>
        <errorMessage>Maximum Matched Amount must be greater than Minimum Matched Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Minimum_Matched_Amount_Value_Present</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.rC_Giving__Account_Validation__c.rC_Giving__Minimum_Matched_Amount_Value_Present__c, NOT(ISBLANK(rC_Giving__Maximum_Matched__c)), ISBLANK(rC_Giving__Minimum_Matched__c))</errorConditionFormula>
        <errorDisplayField>rC_Giving__Minimum_Matched__c</errorDisplayField>
        <errorMessage>Required field (because Maximum Matched is not blank): Minimum Matched</errorMessage>
    </validationRules>
</CustomObject>